[package]
name = "yew_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
web-sys = { version = "0.3", features = ["ReadableStream", "ReadableStreamDefaultReader","TextDecoder"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = { version = "0.3" }
futures = "0.3"
log = "0.4.21"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.81"
http = "0.2.12"
reqwest = "0.11"
#warp = "0"
